# orbiteus

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  alembic.ini  api.py  entrypoint.sh  pyproject.toml  worker.py
backend/migrations/: env.py
backend/migrations/versions/: b04954bd8aec_initial.py
backend/modules/: __init__.py
backend/modules/auth/: __init__.py  actions.py  manifest.py  router.py
backend/modules/auth/controller/: __init__.py  (+1 more)
backend/modules/base/: __init__.py  actions.py  domain.py  manifest.py  mapping.py  repositories.py  router.py  schemas.py  security.py
backend/modules/crm/: __init__.py  actions.py  domain.py  manifest.py  mapping.py  repositories.py  router.py  schemas.py  security.py  services.py
backend/orbiteus_core/: __init__.py  auto_router.py  base_domain.py  config.py  context.py  db.py  exceptions.py  manifest.py  mapper.py  registry.py  repository.py  security_loader.py  temporal.py  ui_config.py  view_loader.py
backend/orbiteus_core/ai/: __init__.py  action.py  registry.py  resolver.py  router.py
backend/orbiteus_core/docs/: spec.md
backend/orbiteus_core/security/: __init__.py  middleware.py  passwords.py  rbac.py  tokens.py
backend/scripts/: __init__.py  seed_bulk_demo.py
backend/tests/: conftest.py  test_auth.py  test_crm.py  test_crm_endpoints.py  test_health.py  test_phase1_phase2.py  test_rbac.py  test_registry.py  test_ui_config_phase3.py
(+94 files in other folders)
